on audio download, scrolls

--- a/V0/static/index.html
+++ b/V0/static/index.html
@@ -30,6 +30,7 @@
     <script src="static/js/record.js"></script>
     <script>
         $(function() {
+            console.log($("html, body"));
         $("html, body").animate({ scrollTop: {{yVal}} }, 500);
         });
     </script>
