mostly functional with polyphonic music now..? and oemer is pipelined in :)

--- a/V0/static/index.html
+++ b/V0/static/index.html
@@ -23,6 +23,11 @@
         <div id = "wrapper3" class = "canvas-wrapper"></div>
         <div id = "wrapper4" class = "canvas-wrapper"></div>
         <div id = "wrapper5" class = "canvas-wrapper"></div>
+        <div id = "wrapper6" class = "canvas-wrapper"></div>
+        <div id = "wrapper7" class = "canvas-wrapper"></div>
+        <div id = "wrapper8" class = "canvas-wrapper"></div>
+        <div id = "wrapper9" class = "canvas-wrapper"></div>
+        <div id = "wrapper10" class = "canvas-wrapper"></div>
     </div>
     <script src="/static/js/pdf.js"></script>
     <script>
